test/scc/expr/semantic-errors/158.t
struct A
{
    union B* a;
};

struct B
{
    int a;
} b;

void test(struct A* a)
{
    a->a = &b;
}